Fixed an issue where parts of the navigation would be hidden on smaller devices

--- a/src/pages/navigation1/style.css
+++ b/src/pages/navigation1/style.css
@@ -16,8 +16,8 @@
   display: flex;
   flex-grow: 1;
   flex-direction: column;
+  margin: auto;
   max-width: 1000px;
-  justify-content: center;
 }
 
 @media(min-width: 500px) {
@@ -44,6 +44,7 @@
   .navigation1-list a {
     max-width: 150px;
     padding: 1.5em 2.5em;
+    white-space: nowrap;
   }
 }
 
